--- a/formulario.html
+++ b/formulario.html
@@ -847,7 +847,10 @@
             { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Café' },
             { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Snacks' },
             { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Gaseosas' },
+            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Café'},
+            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Snacks'},
             { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Gaseosas' }
+            
         ];
 
         function obtenerParametroURL(nombre) {
