--- a/formulario.html
+++ b/formulario.html
@@ -988,13 +988,19 @@
 
                 const mensajeWhatsApp = 
                     '🚨 NUEVA ATENCIÓN REGISTRADA' + '%0A%0A' +
-                    '--- DATOS DEL CLIENTE ---' + '%0A' +
-                    '👤 *Nombre:* ' + datos.nombre + '%0A%0A' +
-                    '--- INFORMACIÓN DE PAGO ---' + '%0A' +
-                    'Método: ' + datos.tipoPago + '%0A' +
-                    'Pago realizado: ' + datos.pagado + '%0A%0A' +
-                    '--- COMENTARIOS ---' + '%0A' +
-                    (datos.comentarios || 'Sin comentarios adicionales');
+                    '--- DATOS DE LA MÁQUINA ---' + '%0A' +
+                    '🔢 *NRO:* ' + datos.nroMaquina + '%0A' +
+                    '🏢 *CLIENTE:* ' + datos.cliente + '%0A' +
+                    '📍 *SECTOR:* ' + datos.sector + '%0A' +
+                    '☕ *TIPO:* ' + datos.tipoMaquina + '%0A' +
+                    '⚙️ *MODELO:* ' + datos.modelo + '%0A%0A' +
+                    '--- DATOS DEL FORMULARIO ---' + '%0A' +
+                    '👤 *Nombre:* ' + datos.nombre + '%0A' +
+                    '💳 *Sistema de Pago:* ' + datos.tipoPago + '%0A' +
+                    '✅ *Pago realizado:* ' + datos.pagado + '%0A' +
+                    (datos.celular ? '📱 *Celular:* ' + datos.celular + '%0A' : '') +
+                    '%0A--- OBSERVACIONES ---' + '%0A' +
+                    (datos.comentarios || 'Sin observaciones adicionales');
 
                 const urlWhatsApp = `https://wa.me/${WHATSAPP_NUMBER}?text=${mensajeWhatsApp}`;
 
