--- a/formulario.html
+++ b/formulario.html
@@ -844,12 +844,12 @@
         const tipoPagoSelect = document.getElementById('tipoPago');
 
         const maquinas = [
-            { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Café' },
-            { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Snacks' },
-            { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Gaseosas' },
-            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Café'},
-            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Snacks'},
-            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Gaseosas' }
+            { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Café', sistPago: '', obs: '' },
+            { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Snacks', sistPago: '', obs: '' },
+            { nro: '1234', cliente: 'Aeropuerto', sector: 'Arribos', modelo: 'H400', tipo: 'Gaseosas', sistPago: '', obs: '' },
+            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Café', sistPago: '', obs: '' },
+            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Snacks', sistPago: '', obs: '' },
+            { nro: '9874', cliente: 'Gestam', sector: 'Personal', modelo: 'H4500', tipo: 'Gaseosas', sistPago: '', obs: '' }
             
         ];
 
@@ -967,21 +967,23 @@
 
                 console.log('Respuesta enviada');
 
-                const mensajeWhatsApp = 
-                    '🚨 NUEVA ATENCIÓN REGISTRADA' + '%0A%0A' +
-                    '--- DATOS DE LA MÁQUINA ---' + '%0A' +
-                    '🔢 *NRO:* ' + datos.nroMaquina + '%0A' +
-                    '🏢 *CLIENTE:* ' + datos.cliente + '%0A' +
-                    '📍 *SECTOR:* ' + datos.sector + '%0A' +
-                    '☕ *TIPO:* ' + datos.tipoMaquina + '%0A' +
-                    '⚙️ *MODELO:* ' + datos.modelo + '%0A%0A' +
-                    '--- DATOS DEL CLIENTE ---' + '%0A' +
-                    '👤 *Nombre:* ' + datos.nombre + '%0A' +
-                    '💳 *Sistema de Pago:* ' + datos.tipoPago + '%0A' +
-                    '✅ *Pago realizado:* ' + datos.pagado + '%0A' +
-                    (datos.celular ? '📱 *Celular:* ' + datos.celular + '%0A' : '') +
-                    '%0A--- COMENTARIOS ---' + '%0A' +
-                    (datos.comentarios || 'Sin comentarios adicionales');
+            const mensajeWhatsApp = 
+                '🚨 NUEVA ATENCIÓN REGISTRADA' + '%0A%0A' +
+                '--- DATOS DE LA MÁQUINA ---' + '%0A' +
+                '🔢 *NRO:* ' + datos.nroMaquina + '%0A' +
+                '🏢 *CLIENTE:* ' + datos.cliente + '%0A' +
+                '📍 *SECTOR:* ' + datos.sector + '%0A' +
+                '☕ *TIPO:* ' + datos.tipoMaquina + '%0A' +
+                '⚙️ *MODELO:* ' + datos.modelo + '%0A' +
+                (datos.sistPago ? '💳 *SIST.PAGO:* ' + datos.sistPago + '%0A' : '') +
+                (datos.obs ? '📝 *OBS:* ' + datos.obs + '%0A' : '') +
+                '%0A--- DATOS DEL CLIENTE ---' + '%0A' +
+                '👤 *Nombre:* ' + datos.nombre + '%0A' +
+                '💳 *Sistema de Pago:* ' + datos.tipoPago + '%0A' +
+                '✅ *Pago realizado:* ' + datos.pagado + '%0A' +
+                (datos.celular ? '📱 *Celular:* ' + datos.celular + '%0A' : '') +
+                '%0A--- COMENTARIOS ---' + '%0A' +
+                (datos.comentarios || 'Sin comentarios adicionales');
 
                 const urlWhatsApp = `https://wa.me/${WHATSAPP_NUMBER}?text=${mensajeWhatsApp}`;
 
