--- a/formulario.html
+++ b/formulario.html
@@ -700,7 +700,7 @@
             <form id="formulario">
                 <div class="hidden-fields">
                     <input type="hidden" id="nroMaquina" name="nroMaquina" value="">
-                    <input type="hidden" id="tipoMaquina" name="tipoMaquina" value="Café">
+                    <input type="hidden" id="tipoMaquina" name="tipoMaquina" value="">
                     <input type="hidden" id="cliente" name="cliente" value="">
                     <input type="hidden" id="sector" name="sector" value="">
                     <input type="hidden" id="modelo" name="modelo" value="">
