--- a/formulario.html
+++ b/formulario.html
@@ -833,7 +833,7 @@
 
     <script>
         const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzutA4i97HtS8uP__ADI-aZlQWDfUBkv9omSVzyxZWXaL84RHXrkztVvTjR6bg0D3DZng/exec';
-        const WHATSAPP_NUMBER = '3512348349';
+        const WHATSAPP_NUMBER = '3515631347';
 
         const formulario = document.getElementById('formulario');
         const mensaje = document.getElementById('mensaje');
@@ -970,13 +970,13 @@
                 const mensajeWhatsApp = 
                     '🚨 NUEVA ATENCIÓN REGISTRADA' + '%0A%0A' +
                     '--- DATOS DE LA MÁQUINA ---' + '%0A' +
-                    '🔢 *NRO:* ' + datos.nroMaquina + '%0A' +
-                    '🏢 *CLIENTE:* ' + datos.cliente + '%0A' +
-                    '📍 *SECTOR:* ' + datos.sector + '%0A' +
-                    '☕ *TIPO:* ' + datos.tipoMaquina + '%0A' +
-                    '⚙️ *MODELO:* ' + datos.modelo + '%0A' +
-                    '💳 *SIST.PAGO:* ' + (datos.sistPago || '') + '%0A' +
-                    '📝 *OBS:* ' + (datos.obs || '') + '%0A' +
+                    '🔢 *Nro:* ' + datos.nroMaquina + '%0A' +
+                    '🏢 *Cliente:* ' + datos.cliente + '%0A' +
+                    '📍 *Sector:* ' + datos.sector + '%0A' +
+                    '☕ *Tipo:* ' + datos.tipoMaquina + '%0A' +
+                    '⚙️ *Modedlo:* ' + datos.modelo + '%0A' +
+                    '💳 *Sist.Pago:* ' + (datos.sistPago || '') + '%0A' +
+                    '📝 *Obs:* ' + (datos.obs || '') + '%0A' +
                     '%0A--- DATOS DEL CLIENTE ---' + '%0A' +
                     '👤 *Nombre:* ' + datos.nombre + '%0A' +
                     '💳 *Sistema de Pago:* ' + datos.tipoPago + '%0A' +
