--- a/formulario.html
+++ b/formulario.html
@@ -974,7 +974,7 @@
                     '🏢 *Cliente:* ' + datos.cliente + '%0A' +
                     '📍 *Sector:* ' + datos.sector + '%0A' +
                     '☕ *Tipo:* ' + datos.tipoMaquina + '%0A' +
-                    '⚙️ *Modedlo:* ' + datos.modelo + '%0A' +
+                    '⚙️ *Modelo:* ' + datos.modelo + '%0A' +
                     '💳 *Sist.Pago:* ' + (datos.sistPago || '') + '%0A' +
                     '📝 *Obs:* ' + (datos.obs || '') + '%0A' +
                     '%0A--- DATOS DEL CLIENTE ---' + '%0A' +
