--- a/formulario.html
+++ b/formulario.html
@@ -943,10 +943,10 @@
                 sector: document.getElementById('sector').value,
                 modelo: document.getElementById('modelo').value,
                 nombre: document.getElementById('nombre').value.trim(),
+                pagado: document.getElementById('pagado').value,
                 tipoPago: document.getElementById('tipoPago').value,
                 celular: celularCompleto,
-                comentarios: document.getElementById('comentarios').value.trim(),
-                pagado: document.getElementById('pagado').value
+                comentarios: document.getElementById('comentarios').value.trim()
             };
 
             console.log('Enviando datos:', datos);
