--- a/formulario.html
+++ b/formulario.html
@@ -734,10 +734,7 @@
 
                 <div class="form-group">
                     <label for="celular">
-                        Número de Celular
-                        <span style="color: #4B1B18; font-size: 0.85em; font-weight: normal; margin-left: 8px;">
-                            (Opcional)
-                        </span>
+                        Número de Celular <span class="required">*</span>
                     </label>
                     <div class="phone-input-container">
                         <div class="country-select-wrapper">
