--- a/formulario.html
+++ b/formulario.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -81,7 +82,6 @@
             padding: 30px 20px;
             text-align: center;
             position: relative;
-            /* overflow: hidden; */
         }
 
         .header::before {
@@ -241,7 +241,6 @@
             background-color: white;
         }
 
-        /* Estilos para el selector de país personalizado */
         .phone-input-container {
             display: flex;
             gap: 12px;
@@ -256,7 +255,6 @@
             z-index: 10;
         }
 
-        /* Selector personalizado visible */
         .custom-select {
             position: relative;
             width: 100%;
@@ -319,31 +317,31 @@
         }
 
         .select-items {
-                    position: absolute;
-                    background-color: white;
-                    bottom: calc(100% + 8px);
-                    left: 0;
-                    right: auto;
-                    min-width: 200px;
-                    z-index: 999;
-                    border-radius: 12px;
-                    box-shadow: 0 8px 32px rgba(116, 113, 113, 0.25);
-                    max-height: 280px;
-                    overflow-y: auto;
-                    border: 2px solid #4B1B18;
-                    animation: slideUp 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-                }
+            position: absolute;
+            background-color: white;
+            bottom: calc(100% + 8px);
+            left: 0;
+            right: auto;
+            min-width: 200px;
+            z-index: 999;
+            border-radius: 12px;
+            box-shadow: 0 8px 32px rgba(116, 113, 113, 0.25);
+            max-height: 280px;
+            overflow-y: auto;
+            border: 2px solid #4B1B18;
+            animation: slideUp 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+        }
 
-                @keyframes slideUp {
-                    from {
-                        opacity: 0;
-                        transform: translateY(10px);
-                    }
-                    to {
-                        opacity: 1;
-                        transform: translateY(0);
-                    }
-                }
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
         .select-hide {
             display: none;
@@ -382,7 +380,6 @@
             font-weight: 600;
         }
 
-        /* Estilos de las banderas en el selector */
         .flag-icon {
             width: 28px;
             height: 20px;
@@ -391,12 +388,10 @@
             flex-shrink: 0;
         }
 
-        /* Ocultar el select nativo */
         .country-select-wrapper select {
             display: none;
         }
 
-        /* Scroll personalizado para la lista */
         .select-items::-webkit-scrollbar {
             width: 8px;
         }
@@ -733,9 +728,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="celular">
-                        Número de Celular <span class="required">*</span>
-                    </label>
+                    <label for="celular">Número de Celular <span class="required">*</span></label>
                     <div class="phone-input-container">
                         <div class="country-select-wrapper">
                             <div class="custom-select">
@@ -814,7 +807,7 @@
                                 <option value="+34" data-country="es">ESP +34</option>
                             </select>
                         </div>
-                        <input type="tel" id="celular" name="celular" class="phone-input" placeholder="Ej: 3512345678" pattern="[0-9]{6,15}">
+                        <input type="tel" id="celular" name="celular" class="phone-input" placeholder="Ej: 3512345678" pattern="[0-9]{6,15}" required>
                     </div>
                 </div>
 
